// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerReport screen render case Comment correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#D6D9EB",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingLeft": 16,
      "paddingRight": 22,
      "paddingVertical": 8,
    }
  }
  testID="banner_report"
>
  <Text
    style={
      Array [
        Object {
          "color": "#212745",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 13,
        },
        Object {},
        Object {
          "marginRight": 16,
        },
      ]
    }
  >
    Your content was reported because of 
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
    >
      Spam
    </Text>
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
</View>
`;

exports[`BannerReport screen render case Post correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#D6D9EB",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingLeft": 16,
      "paddingRight": 22,
      "paddingVertical": 8,
    }
  }
  testID="banner_report"
>
  <Text
    style={
      Array [
        Object {
          "color": "#212745",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 13,
        },
        Object {},
        Object {
          "marginRight": 16,
        },
      ]
    }
  >
    Your content was reported because of 
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
    >
      Illegal, Others, Violent, pornographic, or sexually explicit
    </Text>
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
</View>
`;
